--- a/modules/Calendar4You/cron/InsertEvents.service
+++ b/modules/Calendar4You/cron/InsertEvents.service
@@ -66,6 +66,7 @@ if ($num_rows1 > 0) {
 						$tab_type = 'Events';
 						$focus = CRMEntity::getInstance($currentModule);
 						$focus->column_fields['subject'] = $event->getSummary();
+						if (empty($focus->column_fields['subject'])) continue; // we don't create events with no subject
 						$focus->column_fields['description'] = $event->getDescription();
 						$focus->column_fields['location'] = $event->getLocation();
 						$focus->column_fields['assigned_user_id'] = $userid;
