feat(Logging) separate background event/cron file to track and debug background processes

--- a/log4php.properties
+++ b/log4php.properties
@@ -46,3 +46,11 @@ log4php.appender.A7.MaxFileSize=3MB
 log4php.appender.A7.MaxBackupIndex=10
 log4php.appender.A7.layout=LoggerLayoutPattern
 log4php.appender.A7.File=logs/sqltime.log
+
+log4php.logger.BACKGROUND=FATAL,A8
+log4php.additivity.BACKGROUND = false
+log4php.appender.A8=LoggerAppenderRollingFile
+log4php.appender.A8.MaxFileSize=3MB
+log4php.appender.A8.MaxBackupIndex=10
+log4php.appender.A8.layout=LoggerLayoutPattern
+log4php.appender.A8.File=logs/background.log
