--- a/modules/Calendar4You/cron/InsertEvents.service
+++ b/modules/Calendar4You/cron/InsertEvents.service
@@ -32,6 +32,7 @@ $num_rows1 = $adb->num_rows($result1);
 
 if ($num_rows1 > 0) {
 	while($row1 = $adb->fetchByAssoc($result1)) {
+                $repeated=0;
 		$userid = $row1['userid'];
 		$synctoken = $row1['synctoken'];
 		$CALENDAR_ID=$row1['calendar'];
@@ -64,12 +65,13 @@ if ($num_rows1 > 0) {
 					$synctoken2=$events->getNextSyncToken();
 					foreach ($events->getItems() as $event) {
 						$gers = $adb->pquery($checkevent,array($event->getId()));
-						if ($adb->num_rows($gers)>0) continue; // we already have this one > it will be updated
-						if ($event->getStatus()=='cancelled') continue;
+						if($adb->num_rows($gers)==0) { // we already have this one > it will be updated
+					        if(!in_array($event->getId(),$repeatedid)){
+                                                if ($event->getStatus()!='cancelled'){
 						$tab_type = 'Events';
 						$focus = CRMEntity::getInstance($currentModule);
 						$focus->column_fields['subject'] = $event->getSummary();
-						if (empty($focus->column_fields['subject'])) continue; // we don't create events with no subject
+						if (empty($focus->column_fields['subject'])) {$repeatedid[]=$event->getId();continue;}// we don't create events with no subject
 						$focus->column_fields['description'] = $event->getDescription();
 						$focus->column_fields['location'] = $event->getLocation();
 						$focus->column_fields['assigned_user_id'] = $userid;
@@ -86,7 +88,7 @@ if ($num_rows1 > 0) {
 								$is_full_day_event = false;
 							$startdatetime = new DateTime($evdtst);
 							$startdatetime->setTimeZone($c_time_zone);
-							if ($startdatetime->format('Y-m-d') < $controldate) continue;  // it is before controldate > we ignore it
+							if ($startdatetime->format('Y-m-d') < $controldate) {$repeatedid[]=$event->getId();continue;}  // it is before controldate > we ignore it
 							$new_time_start_time = $startdatetime->format('U');
 							$user_date_start = DateTimeField::convertToUserFormat($startdatetime->format('Y-m-d'));
 							if (!$is_full_day_event)
@@ -124,9 +126,13 @@ if ($num_rows1 > 0) {
 						$sql3 = 'insert into its4you_googlesync4you_events (crmid,geventid,userid,eventtype,lastmodified) values (?,?,?,?,?)';
 						$adb->pquery($sql3,array($focus->id, $event->getId(),$userid,$type,$event->getUpdated()));
 						$adb->pquery("update its4you_googlesync4you_access set synctoken='$synctoken2' where userid=$userid",array());
-					}
+					 }
+                                        } 
+                                        else $repeated++;
+                                        } 
+                                        } 
 					$pageToken = $events->getNextPageToken();
-					if ($pageToken) {
+					if ($pageToken && $repeated<100) {
 						$events = $GoogleSync4You->getGoogleCalEvents($CALENDAR_ID,$synctoken,$pageToken);
 					} else {
 						break;
