feat(Cron) cron watcher service: only send email if something is wrong

--- a/modules/CronTasks/cronWatcher.service
+++ b/modules/CronTasks/cronWatcher.service
@@ -73,7 +73,7 @@ if($mailto != ''){
 }else {
 	$mailto = $mailtoDefined;
 }
-if ($mailto != '') {
+if ($mailto != '' and count($output)>0) {
 	$from_name = $HELPDESK_SUPPORT_NAME;
 	$form_mail = $HELPDESK_SUPPORT_EMAIL_ID;
 	$mailsubject = "[Warning]: cron Task(s) exceed time threshold";
