--- a/cron/modules/SalesOrder/RecurringInvoice.service
+++ b/cron/modules/SalesOrder/RecurringInvoice.service
@@ -122,9 +122,7 @@ function createInvoice($salesorder_id) {
 	);
 
 	if(!$current_user) {
-		$current_user = new Users();
-		$current_user->id = 1;
-		$current_user = $current_user->retrieve_entity_info($current_user->id, "Users");
+		$current_user = Users::getActiveAdminUser();
 	}
 	$so_focus = new SalesOrder();
 	$so_focus->id = $salesorder_id;
