--- a/cron/SendReminder.service
+++ b/cron/SendReminder.service
@@ -20,7 +20,8 @@ require_once("config.php");
 
 $current_user = Users::getActiveAdminUser();
 // Set the default sender email id
-global $HELPDESK_SUPPORT_EMAIL_ID,$HELPDESK_SUPPORT_NAME;
+$HELPDESK_SUPPORT_EMAIL_ID = GlobalVariable::getVariable('HelpDesk_Support_EMail','support@your_support_domain.tld','HelpDesk');
+$HELPDESK_SUPPORT_NAME = GlobalVariable::getVariable('HelpDesk_Support_Name','your-support name','HelpDesk');
 $from = $HELPDESK_SUPPORT_EMAIL_ID;
 if(empty($from)) {
 	// default configuration is empty?
