--- a/modules/CronTasks/cronWatcher.service
+++ b/modules/CronTasks/cronWatcher.service
@@ -28,7 +28,7 @@ include_once('vtlib/Vtiger/Module.php');
 require_once('vtlib/Vtiger/Cron.php');
 require_once('modules/Emails/mail.php');
 require_once('modules/Emails/Emails.php');
-global $HELPDESK_SUPPORT_EMAIL_ID, $HELPDESK_SUPPORT_NAME, $site_URL, $currentModule,$current_user;
+global $site_URL, $currentModule,$current_user;
 
 // i18n
 //$i18nInactive = getTranslatedString('LBL_INACTIVE','CronTasks');
@@ -74,8 +74,6 @@ if($mailto != ''){
 	$mailto = $mailtoDefined;
 }
 if ($mailto != '' and count($output)>0) {
-	$from_name = $HELPDESK_SUPPORT_NAME;
-	$form_mail = $HELPDESK_SUPPORT_EMAIL_ID;
 	$mailsubject = "[Warning]: cron Task(s) exceed time threshold";
 	$mailcontent = '<br>Some cron tasks in <b>'.$site_URL.'</b> have exceeded the maximum execution time.<br><br>';
 	$mailcontent.= '<table width="100%" border=1>';
@@ -94,7 +92,9 @@ if ($mailto != '' and count($output)>0) {
 		$mailcontent.= '</tr>';
 	}
 	$mailcontent.= '</table>';
-	send_mail('Emails',$mailto,$from_name,$form_mail,$mailsubject,$mailcontent);
+	$HELPDESK_SUPPORT_EMAIL_ID = GlobalVariable::getVariable('HelpDesk_Support_EMail','support@your_support_domain.tld','HelpDesk');
+	$HELPDESK_SUPPORT_NAME = GlobalVariable::getVariable('HelpDesk_Support_Name','your-support name','HelpDesk');
+	send_mail('Emails',$mailto,$HELPDESK_SUPPORT_NAME,$HELPDESK_SUPPORT_EMAIL_ID,$mailsubject,$mailcontent);
 }
 
 ?>
