--- a/cron/modules/Import/ScheduledImport.service
+++ b/cron/modules/Import/ScheduledImport.service
@@ -8,7 +8,8 @@
  * All Rights Reserved.
  *************************************************************************************/
 
-$previousBulkSaveMode = $VTIGER_BULK_SAVE_MODE;
+global $VTIGER_BULK_SAVE_MODE;
+$previousBulkSaveMode = isset($VTIGER_BULK_SAVE_MODE) ? $VTIGER_BULK_SAVE_MODE : false;
 $VTIGER_BULK_SAVE_MODE = true;
 
 require_once 'modules/Import/controllers/Import_Data_Controller.php';
